[tool.poetry]
name = "CumTube"
version = "0.1.0"
description = "adfree unblocked youtube frontend made with CUM"
authors = ["Mollomm1"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
Flask = "^2.2.3"
timeago = "^1.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
